# Software-Company

./: .env.example  .gitignore  Google_Colab_Chatterbox.ipynb  README.md  devfoundry-backend.spec  docker-compose.yml  start_local.bat  start_local.mjs  start_local.ps1  temp_env.py  test_jira.py
agents/: registry.yaml
config/: departments.yaml  mcp_catalog.json  settings.json
dashboard/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AgentGraph.tsx  (+31 more)
dashboard/src-tauri/: .env.production  Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/src/: backend.rs  main.rs
docs/: CREDENTIALS.md  MCP_CATALOG.md  OPERATING_MODEL.md  RUN_LOCAL.md  UI_SYSTEM.md
knowledge_base/: init.sql
orchestrator/: Dockerfile  artifact_memory.py  auth.py  config_manager.py  database.py  llm_client.py  llm_prompts.py  llm_providers.py  llm_tools.py  main.py  mcp_pool.py  models.py  phase_contracts.py  project_config.py  project_db.py  project_evaluations.py  project_graph.py  project_persistence.py  project_pubsub.py  project_service.py  project_store.py  project_traces.py  project_usage.py  registry_validation.py  requirements-voice.txt  requirements.txt  run_backend.py  secrets_vault.py  semantic_cache.py  test_dispatcher.py  test_importlib.py  test_mcp_pool.py  test_project_graph_validation.py  test_registry_validation.py  test_router.py  token_budget.py  tool_idempotency.py  tool_policy.py  tool_schemas.py  tools_dispatcher.py  (+2 more)
(+50 files in other folders)
