[package]
name = "software-company-desktop"
version = "0.1.0"
description = "Software Company desktop shell"
authors = ["Software Company"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
